--- a/cathacks.html
+++ b/cathacks.html
@@ -24,6 +24,11 @@
 				<td>Phone</td>
 				<td><input type="tel" id=phone name=phone pattern="[0-9]{11}"></td>
 			</tr>
+			<tr>
+				<td>Start Time</td>
+				<td><input type="number" style="width: 40px;" id=hour name=hour>:<input type="number" style="width: 40px;" id=min name=min></td>
+
+			</tr>
 		</table>
 		
 		<input type="button" type="submit" name="empInfo" value="Submit">
