added link to css file

--- a/cathacks.html
+++ b/cathacks.html
@@ -4,6 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Cat Hacks</title>
+		<link rel ="stylesheet" type="text/css" href="website_style.css" />
 	</head>
 
 	<body style="font-family:Free Serif">
