--- a/cathacks.html
+++ b/cathacks.html
@@ -8,7 +8,7 @@
 	</head>
     <img src="">
 	<body style="font-family:Free Serif">
-		<h1>Cool Guys Doing Stuff Employee Portal</h1>
+		<h1>Hacksac Inc. Employee Portal</h1>
 		<form method="POST" action="addEmployee.php">
 		<table class="center">
 			<th>New Employee</th>
