--- a/cathacks.html
+++ b/cathacks.html
@@ -6,7 +6,7 @@
 		<title>Cat Hacks</title>
         <link rel ="stylesheet" type="text/css" href="website_style.css" />
 	</head>
-    <img src="">
+    	<img src="hackysac.jpg" alt="Image of an ordinary hackysac">
 	<body style="font-family:Free Serif">
 		<h1>Hacksac Inc. Employee Portal</h1>
 		<form method="POST" action="addEmployee.php">
