--- a/cathacks.html
+++ b/cathacks.html
@@ -8,7 +8,7 @@
 	</head>
     	<img src="hackysac.jpg" alt="Image of an ordinary hackysac">
 	<body style="font-family:Free Serif">
-		<h1>Hacksac Inc. Payroll System</h1>
+		<h1>HackySac Inc. Payroll System</h1>
 		<form method="POST" action="addEmployee.php">
 		<table class="center">
 			<th>New Employee</th>
